[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/pow/pow-frame-1.png" type="Texture" id=1]
[ext_resource path="res://assets/pow/pow-frame-2.png" type="Texture" id=2]
[ext_resource path="res://assets/pow/pow-frame-3.png" type="Texture" id=3]
[ext_resource path="res://assets/pow/pow-frame-5.png" type="Texture" id=4]
[ext_resource path="res://assets/pow/pow-frame-4.png" type="Texture" id=5]
[ext_resource path="res://assets/pow/pow-frame-6.png" type="Texture" id=6]
[ext_resource path="res://Powerup.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 25.0

[node name="Powerup" type="Area2D" groups=["powerups"]]
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationDelay" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Powerup_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="AnimationDelay" to="." method="_on_AnimationDelay_timeout"]
